# hydro-forecasting-demonstrations

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  dirty_requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  requirements_builder.sh  setup.py
.github/: rename_project.sh
.github/workflows/: main.yml  rename_project.yml
hydroforecastingdemo/: __main__.py  base.py  cli.py
notebooks/: bjpmodel-demonstration.ipynb  normtransform-demonstration.ipynb
tests/: test_base.py
