[tool.poetry]
name = "hydroforecastingdemo"
version = "0.1.0"
description = ""
authors = ["Andrew Freebairn <andrew.freebairn@csiro.au>"]
readme = "README.md"
packages = [{include = "hydroforecastingdemo"}]

[tool.poetry.dependencies]
python = ">=3.13.0,<3.14"
pytest = ">8.3.5,<9.0.0"
pytest-github-actions-annotate-failures = "^0.2.0"
bjpmodel = "^0.2.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
